--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
