--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
        		 <version>1.5.12</version>
 		</dependency>
 		
+		
+		<!-- Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
